<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="14dp"
    android:orientation="vertical"
    android:outlineProvider="bounds"
    android:background="@drawable/popup_visual_layout"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/popup_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/entry_popup_title_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/popup_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_weight="1"
            android:hint="@string/entry_popup_title_hint"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/popup_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="popupCancel"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textSize="12sp" />

        <Button
            android:id="@+id/popup_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="popupSubmit"
            android:padding="5dp"
            android:text="@string/submit"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
