<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/entry_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@android:color/holo_blue_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoughts_label"
            android:textColor="@android:color/white"
            android:textSize="32sp"/>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/entry_list_name_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="-32dp"
            android:layout_toStartOf="@id/entry_list_date_button"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="24dp"
            android:onClick="sortName"
            android:text="@string/name_label" />
        <Button
            android:id="@+id/entry_list_date_button"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:layout_toStartOf="@id/entry_list_length_button"

            android:text="@string/date_label"/>
        <Button
            android:id="@+id/entry_list_length_button"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/length_label"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/entry_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
